--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="menu-mobile"><i class="fa-solid fa-bars"></i>
-      <div class="lower-menu d-flex justify-content-start ">
+      <div class="lower-menu  d-flex justify-content-start ">
         <nav>
           <ul>
             <li class="text-uppercase">
@@ -47,7 +47,7 @@
               >
             </li>
             <li class="">
-              <a href="" class="text-uppercase"
+              <a class="text-uppercase"
                 ><i
                   class="fa-regular fa-file d-flex flex-column justify-content-center align-items-center"
                 ></i
@@ -75,7 +75,7 @@
               </ul>
             </li>
             <li class="">
-              <a href="" class="text-uppercase"
+              <a href="#" class="text-uppercase"
                 ><i
                   class="fa-solid fa-person-chalkboard d-flex flex-column justify-content-center align-items-center"
                 ></i
@@ -88,7 +88,7 @@
               </ul>
             </li>
             <li class="">
-              <a href="" class="text-uppercase"
+              <a href="#" class="text-uppercase"
                 ><i
                   class="fa-solid fa-circle-info d-flex flex-column justify-content-center align-items-center"
                 ></i
@@ -247,7 +247,7 @@
             <img src="images/news1.png" alt="" />
             <div class="d-flex justify-content-start align-items-center mt-2">
               <p type="button" class="fw-bold">
-                Thông báo đăng ký học bạ và nhập học
+                Sự kiện Triển lãm sách với chủ đề "Người phụ nữ Việt Nam"
               </p>
             </div></a
           >
@@ -256,6 +256,7 @@
           <div class="news">
             <a href="news-detail.html" class=" d-flex">
               <div class="image col col-4">
+                <!--delete  width = "186px" -->
                 <img class="w-100" src="images/libary.jpg" />
               </div>
               <div class="content fw-bold col col-8">
@@ -265,6 +266,7 @@
           </div>
           <div class="news1 ">
             <a href="news-detail.html" class=" d-flex">
+              <!--delete  width = "186px" -->
               <div class="image col col-4">
                 <img class="w-100" src="images/news3.png" />
               </div>
@@ -276,6 +278,7 @@
           <div class="news1 ">
             <a href="news-detail.html" class=" d-flex">
               <div class="image col col-4">
+                <!--delete  width = "186px" -->
                 <img class="w-100" src="images/news4.png" />
               </div>
               <div class="content fw-bold col col-8">
@@ -396,17 +399,6 @@
             <p>Zalo</p>
             <img style="padding: 8px 0 0 10px" src="images/zalo.png" />
           </div>
-          <div class="col col-2">
-            <div
-              class="col col-2 d-flex align-items-center justify-content-center facebook"
-            >
-              <p>facebook</p>
-              <i
-                style="margin-left: 10px; color: #3b5998; width: 15px"
-                class="fa-brands fa-square-facebook"
-              ></i>
-            </div>
-          </div>
           <div class="col col-8 d-flex align-items-center">
             <i class="fa-solid fa-location-dot"></i>
             <p>
@@ -428,6 +420,17 @@
           <div class="col col-8 d-flex align-items-center">
             <i class="fa-solid fa-phone"></i>
             <p>02512.607.770</p>
+          </div>
+          <div class="col col-2">
+            <div
+              class="col col-2 d-flex align-items-center justify-content-center facebook"
+            >
+              <p>facebook</p>
+              <i
+                style="margin-left: 10px; color: #3b5998; width: 15px"
+                class="fa-brands fa-square-facebook"
+              ></i>
+            </div>
           </div>
           <div class="col col-8 d-flex align-items-center mail">
             <i class="fa-regular fa-envelope"></i>
