--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <div class="col col-5">
           <div class="news">
             <a href="news-detail.html" class=" d-flex">
-              <div class="image col col-4">
+              <div class="image col col-4"> <!--thêm class col và col-4 vào trong đây -->
                 <!--delete  width = "186px" -->
                 <img class="w-100" src="images/libary.jpg" />
               </div>
@@ -267,7 +267,7 @@
           <div class="news1 ">
             <a href="news-detail.html" class=" d-flex">
               <!--delete  width = "186px" -->
-              <div class="image col col-4">
+              <div class="image col col-4"><!--thêm class col và col-4 vào trong đây -->
                 <img class="w-100" src="images/news3.png" />
               </div>
               <div class="content fw-bold col col-8">
@@ -277,7 +277,7 @@
           </div>
           <div class="news1 ">
             <a href="news-detail.html" class=" d-flex">
-              <div class="image col col-4">
+              <div class="image col col-4"><!--thêm class col và col-4 vào trong đây -->
                 <!--delete  width = "186px" -->
                 <img class="w-100" src="images/news4.png" />
               </div>
