--- a/news-detail2.html
+++ b/news-detail2.html
@@ -25,7 +25,7 @@
         src="images/logo.png"
         alt="logo"
       />
-      <div class="lower-menu d-flex justify-content-start">
+      <div class="lower-menu d-flex justify-content-start news-menu">
         <nav>
           <ul>
             <li class="text-uppercase">
@@ -43,7 +43,7 @@
                 ></i
                 >Tài nguyên</a
               >
-              <ul class="submenu">
+              <ul class="submenu submenu-news-detail">
                 <li><a href="document.html">Tài liệu điện tử</a></li>
                 <li><a href="document.html">Video bài giảng</a></li>
                 <li><a href="document.html">Tài liệu môn học</a></li>
@@ -57,7 +57,7 @@
                 ></i
                 >Dịch vụ</a
               >
-              <ul class="submenu">
+              <ul class="submenu submenu-news-detail">
                 <li><a href="#">Dịch vụ sinh viên</a></li>
                 <li><a href="#">Giảng viên</a></li>
                 <li><a href="#">nhân viên</a></li>
@@ -71,7 +71,7 @@
                 ></i
                 >Hướng dẫn</a
               >
-              <ul class="submenu">
+              <ul class="submenu submenu-news-detail">
                 <li><a href="about.html">Hướng dẫn sử dụng</a></li>
                 <li><a href="about.html">Hướng dẫn tài khoản sinh viên</a></li>
                 <li><a href="about.html">Sinh viên mượn sách</a></li>
@@ -84,7 +84,7 @@
                 ></i
                 >Giới thiệu</a
               >
-              <ul class="submenu">
+              <ul class="submenu submenu-news-detail">
                 <li><a href="about.html">Giới thiệu chung</a></li>
                 <li><a href="about.html">Nội quy</a></li>
               </ul>
@@ -97,7 +97,7 @@
       </div>
     </header>
 
-    <div class="title">
+    <div class="title-news-detail">
       <p class="container fw-bold text-uppercase">
         TỪ A - Z THỦ TỤC ĐĂNG KÝ XÉT HỌC BẠ VÀ NHẬP HỌC TẠI TRƯỜNG ĐẠI HỌC CÔNG
         NGHỆ ĐỒNG NAI
@@ -119,7 +119,7 @@
     <div class="content container">
       <div class="row">
         <div class="col col-12">
-          <img src="images/news1.png" />
+          <img width="100%" src="images/news1.png" />
           <p>
             BƯỚC 1: Đăng ký thông tin tại trang xét tuyển của Nhà trường:
             https://xetonline.dntu.edu.vnĐiền các thông tin theo mẫu và chụp ảnh
@@ -156,7 +156,7 @@
           <div class="col col-6">
             <div class="news-in-school">
               <div class="d-flex justify-content-between">
-                <h4 class="text-uppercase fw-bold">TIN TRONG TRƯỜNG</h4>
+                <h4 class= "fw-bold">TIN TRONG TRƯỜNG</h4>
                 <p class="see-more">
                   xem thêm <i class="fa-solid fa-chevron-right"></i>
                 </p>
@@ -166,7 +166,7 @@
                   <img width="100%" src="images/libary.jpg" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold ms-3 content-news-more">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -177,7 +177,7 @@
                   <img width="100%" src="images/news2.png" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -188,7 +188,7 @@
                   <img width="100%" src="images/news1.png" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -199,7 +199,7 @@
           <div class="col col-6 ">
             <div class="news-other">
               <div class="d-flex justify-content-between">
-                <h4 class="text-uppercase fw-bold">TIN bên ngoài</h4>
+                <h4 class=" fw-bold">TIN bên ngoài</h4>
                 <p class="see-more">
                   xem thêm <i class="fa-solid fa-chevron-right"></i>
                 </p>
@@ -209,7 +209,7 @@
                   <img width="100%" src="images/libary.jpg" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -220,7 +220,7 @@
                   <img width="100%" src="images/news2.png" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -231,7 +231,7 @@
                   <img width="100%" src="images/news2.png" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -242,7 +242,7 @@
                   <img width="100%" src="images/news6.png" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
@@ -253,7 +253,7 @@
                   <img width="100%" src="images/banner1.jpg" />
                 </div>
                 <div class="col-8">
-                  <p class="fw-bold text-uppercase ms-3">
+                  <p class="fw-bold content-news-more ms-3">
                     ĐÓN ĐOÀN KHẢO SÁT SƠ BỘ KIỂM ĐỊNH CHẤT LƯỢNG TRƯỜNG GIAI ĐOẠN
                     2023 – 2028
                   </p>
